--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ env/
 ENV/
 env.bak/
 venv.bak/
+.env
 
 # Bases de datos locales
 *.sqlite3
@@ -85,3 +86,5 @@ node_modules/ # Si usas npm/node para frontend
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+staticfiles_production/
