--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+attrs==25.3.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -7,14 +8,24 @@ cryptography==46.0.1
 Django==5.2.1
 django-allauth==65.11.2
 django-crispy-forms==2.4
+django-filter==25.1
+djangorestframework==3.16.1
+drf-spectacular==0.28.0
 gunicorn==23.0.0
 idna==3.10
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 mysqlclient==2.2.7
 packaging==25.0
 pycparser==2.23
 PyJWT==2.10.1
 python-dotenv==1.1.0
+PyYAML==6.0.3
+referencing==0.36.2
 requests==2.32.5
+rpds-py==0.27.1
 sqlparse==0.5.3
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
