fix(pipeline): use requirements/docker.txt for CI
Pipeline Update:
- Changed from requirements/base.txt to requirements/docker.txt
- docker.txt includes base.txt + psycopg2-binary (PostgreSQL)
- Better for CI: includes all dependencies + database driver
- Cache key updated to requirements/docker.txt
- All tests and security checks maintained

Why docker.txt:
- ✅ Includes base.txt dependencies
- ✅ Has psycopg2-binary (required for Postgres in CI)
- ✅ Same as development environment
- ✅ Compatible with all tests

Related to: #enterprise-microservices-clean
Phase: Pipeline Optimization

--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -1,6 +1,6 @@
 # GitHub Actions CI/CD Pipeline para Django
 # Archivo: .github/workflows/django-tests.yml
-# Actualizado para nueva arquitectura clean
+# Actualizado para nueva arquitectura clean + requirements/docker.txt
 
 name: 🚀 Django Tests & Deployment Pipeline
 
@@ -44,14 +44,14 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements/docker.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
 
     - name: 🔧 Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements/docker.txt
         pip install coverage
 
     - name: 🔑 Setup environment variables
