feat: integrate Resend emails, spanish templates, and dev tooling
- add custom Resend email backend + signal-based site config
- localize password reset templates and email content (es)
- introduce MailHog service and Resend dependency for dev testing
- update settings and requirements accordingly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,19 @@ services:
     networks:
       - agenda_network
 
+  # MailHog - Email Testing Service (Solo para desarrollo)
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: agenda_mailhog
+    ports:
+      - "1025:1025"  # SMTP server
+      - "8025:8025"  # Web UI para ver emails
+    networks:
+      - agenda_network
+    restart: unless-stopped
+    profiles:
+      - dev  # Solo se inicia con --profile dev
+
   # Django Web Application Service
   web:
     build:
